--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@popperjs/core": "^2.11.5",
     "@vuelidate/core": "^2.0.0-alpha.42",
     "@vuelidate/validators": "^2.0.0-alpha.30",
+    "ant-design-vue": "^3.3.0-beta.2",
     "bootstrap": "^5.2.0",
     "bootstrap-vue": "^2.22.0",
     "core-js": "^3.8.3",
